<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_pin"
    style="@style/CardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="18dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/textviewTitleNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:maxLength="20"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/textviewDateNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="12 Oct 2024" />

        <TextView
            android:id="@+id/textviewContentNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textviewDateNote"
            app:layout_constraintTop_toBottomOf="@+id/textviewTitleNote"
            android:layout_marginStart="10dp"
            android:maxLength="32"
            tools:text="@string/content" />

        <ImageView
            android:id="@+id/imageView_pin"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@string/pin"
            app:tint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_push_pin_24"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
